Fixed the z-index order for the user pop-up menu

--- a/static/styles/empornium/style.css
+++ b/static/styles/empornium/style.css
@@ -290,6 +290,7 @@ span.infinity {
     top: 17px;
     left: 0px;
     background-color: #00436b;
+    z-index: 10;
 }
 
 #userinfo_username li ul li a {
